--- a/openshift/pipelines/templates/waiverdb-polling-pagure.yaml
+++ b/openshift/pipelines/templates/waiverdb-polling-pagure.yaml
@@ -228,7 +228,7 @@ objects:
                         def isMaster = env.PAGURE_POLLING_FOR_PR != 'true'
                         def devBuild = bcSelector.startBuild(
                           '-e', "WAIVERDB_GIT_REPO=${env.GIT_URL}",
-                          '-e', "WAIVERDB_GIT_REF=${env.GIT_BRANCH}",
+                          '-e', "WAIVERDB_GIT_REF=${isMaster? env.GIT_COMMIT : env.GIT_BRANCH}",
                           '-e', "FORCE_PUBLISH_IMAGE=${isMaster}",
                           '-e', "FORCE_PUBLISH_DOCS=${isMaster}",
                           '-e', "WAIVERDB_MAIN_BRANCH=${PAGURE_POLLED_BRANCH}",
@@ -242,7 +242,7 @@ objects:
                         if (env.PAGURE_POLLING_FOR_PR == 'true') {
                           // setting PR status to Pending
                           setBuildStatusOnPagurePR(null, 'Pending')
-                        } 
+                        }
                         echo "Waiting for dev build ${devBuildInfo.metadata.name}(${env.DEV_BUILD_URL}) to complete..."
                         devBuild.watch {
                           return it.object().status.phase != "Running"
