--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,10 @@ whitelist_externals =
     find
 commands =
     find -name *.pyc -delete
-    py.test tests/
+    py.test {posargs}
+
+[pytest]
+testpaths = tests/
 
 [testenv:docs]
 changedir = docs
