CI/CD: Update CI message test case names
c3i.integration.dev is assigned to integration tests with dev version.
c3i.integration.stage is assigned to integration tests with stage version.
c3i.integration.prod is assigned to integration tests with prod version.

--- a/openshift/pipelines/templates/waiverdb-integration-test-template.yaml
+++ b/openshift/pipelines/templates/waiverdb-integration-test-template.yaml
@@ -39,6 +39,10 @@ parameters:
   displayName: Name of OpenShift cloud in Jenkins master configuration
   required: true
   value: openshift
+- name: ENVIRONMENT
+  displayName: environment name (dev/stage/prod)
+  required: true
+  value: dev
 objects:
 - kind: ServiceAccount
   apiVersion: v1
@@ -92,4 +96,6 @@ objects:
           value: "${JENKINS_AGENT_CLOUD_NAME}"
         - name: JENKINS_AGENT_SERVICE_ACCOUNT
           value: "${NAME}-jenkins-slave"
+        - name: ENVIRONMENT
+          value: "${ENVIRONMENT}"
         jenkinsfilePath: openshift/pipelines/templates/waiverdb-integration-test.Jenkinsfile
