CI/CD: Correct `scratch` values in ci.container-image.test.complete messages
Following up https://pagure.io/waiverdb/pull-request/281.

`scratch` field should be set to `true` for a PR test while `false` for other tests. New job parameter `IMAGE_IS_SCRATCH` is introduced to indicate if the tested container image is "scratch".

--- a/openshift/pipelines/templates/waiverdb-integration-test-template.yaml
+++ b/openshift/pipelines/templates/waiverdb-integration-test-template.yaml
@@ -80,6 +80,8 @@ objects:
           value: "${WAIVERDB_GIT_REF}"
         - name: "IMAGE"
           value: "${IMAGE}"
+        - name: IMAGE_IS_SCRATCH
+          value: "false"
         - name: "CONTAINER_REGISTRY_CREDENTIALS"
           value: "${CONTAINER_REGISTRY_CREDENTIALS}"
         - name: "TEST_ID"
