CI/CD: Trigger image promotion job when receive a Greenwave message
When an image is ready to promote, Greenwave sends a CI message
to `VirtualTopic.eng.greenwave.decision.update` topic.
This PR adds a trigger job to consume that kind of messages
and trigger a new build of image promotion job.

--- a/openshift/pipelines/jobs/waiverdb-promoting-to-prod.env
+++ b/openshift/pipelines/jobs/waiverdb-promoting-to-prod.env
@@ -1,4 +1,3 @@
 NAME=waiverdb-promoting-to-prod
 IMAGE=quay.io/factory2/waiverdb:stage
-PROMOTING_DESTINATIONS=quay.io/factory2/waiverdb:prod,docker-registry.engineering.redhat.com/factory2/waiverdb:prod
-DEST_IMAGESTREAM_TAG=prod
+DEST_TAG=prod
