--- a/openshift/pipelines/jobs/waiverdb-promoting-to-stage.env
+++ b/openshift/pipelines/jobs/waiverdb-promoting-to-stage.env
@@ -1,4 +1,3 @@
 NAME=waiverdb-promoting-to-stage
 IMAGE=quay.io/factory2/waiverdb:latest
-PROMOTING_DESTINATIONS=quay.io/factory2/waiverdb:stage,docker-registry.engineering.redhat.com/factory2/waiverdb:stage
-DEST_IMAGESTREAM_TAG=stage
+DEST_TAG=stage
