CI/CD: Fix `scratch` field in ci.container-image.test.complete messages
Following up https://pagure.io/waiverdb/pull-request/282.

This PR changes the pagure polling job to pass the original branch name
rather than commit ID to `waiverdb-dev` job on master branch changes.
`waiverdb-dev` then passes commit ID to downstream container build and integration test jobs
to ensure the exact same commit is processed.

--- a/openshift/pipelines/templates/waiverdb-polling-pagure.yaml
+++ b/openshift/pipelines/templates/waiverdb-polling-pagure.yaml
@@ -225,12 +225,9 @@ objects:
                       openshift.withProject("${DEV_PIPELINE_BC_NAMESPACE}") {
                         def bcSelector = openshift.selector('bc', "${DEV_PIPELINE_BC_NAME}")
                         echo 'Starting a dev pipeline build...'
-                        def isMaster = env.PAGURE_POLLING_FOR_PR != 'true'
                         def devBuild = bcSelector.startBuild(
                           '-e', "WAIVERDB_GIT_REPO=${env.GIT_URL}",
-                          '-e', "WAIVERDB_GIT_REF=${isMaster? env.GIT_COMMIT : env.GIT_BRANCH}",
-                          '-e', "FORCE_PUBLISH_IMAGE=${isMaster}",
-                          '-e', "FORCE_PUBLISH_DOCS=${isMaster}",
+                          '-e', "WAIVERDB_GIT_REF=${env.GIT_BRANCH}",
                           '-e', "WAIVERDB_MAIN_BRANCH=${PAGURE_POLLED_BRANCH}",
                           '-e', "BUILD_DISPLAY_RENAME_TO=${currentBuild.displayName}",
                         )
