CI/CD: Job refactoring
Following up https://pagure.io/waiverdb/issue/263.

1. Split `waiverdb-dev` job into `waiverdb-premerge` and `waiverdb-postmerge`
for better readability. The new 2 jobs are generated from the same template `waiverdb-build`.
2. Move Pagure pull-request flagging and mail sending code from polling job to `waiverdb-premerge` and `waiverdb-postmerge` jobs.
3. Use [C3I Library][1] to interact with Pagure API and wait for downstream builds.

[1]: https://pagure.io/c3i-library

optimize

--- a/openshift/pipelines/jobs/waiverdb-postmerge.env
+++ b/openshift/pipelines/jobs/waiverdb-postmerge.env
@@ -1,3 +1,2 @@
-# This job is deprecated. New jobs are waiverdb-premerge and waiverdb-postmerge
-NAME=waiverdb-dev
+NAME=waiverdb-postmerge
 PAGURE_DOC_REPO_NAME= # Temporarily disable doc push to workaround https://pagure.io/pagure/issue/3919. Remove this line when it is fixed.
