--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # This is a list of pypi packages to be installed into virtualenv. Alternatively,
 # you can install these as RPMs instead of pypi packages.
 
-fedmsg[consumers,commands]
+fedora_messaging
 Flask
 Flask-RESTful!=0.3.6
 Flask-SQLAlchemy
