--- a/tox.ini
+++ b/tox.ini
@@ -42,7 +42,7 @@ commands =
 [flake8]
 show-source = True
 max-line-length = 100
-exclude = .git,.tox,dist,*egg,env_waiverdb,*fedmsg.d,docs,conf,waiverdb/migrations
+exclude = .git,.tox,dist,*egg,env_waiverdb,docs,conf,waiverdb/migrations
 
 # E124: closing bracket does not match visual indentation
 # W503 line break before binary operator
