FIX W504 warning: Line break occurred after a binary operator
After upgrading C3I Jenkins slave pod from Fedora 28 to 29,
C3I pipeline builds for waiverdb fails with a Flake8 warning:
[W504 line break after binary operator][2].

This happens because of a [updated PEP 8 rule][1], which
recommends that line breaks should occur before the binary operator
because it keeps all operators aligned.
However [both W503 and W504 are enforced when all warnings are configured][3].

This pull-request eliminates the warning by following the new rule and ignoring W503.

[1]: https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
[2]: https://lintlyci.github.io/Flake8Rules/rules/W504.html
[3]: https://gitlab.com/pycqa/flake8/issues/463

--- a/tox.ini
+++ b/tox.ini
@@ -45,4 +45,5 @@ max-line-length = 100
 exclude = .git,.tox,dist,*egg,env_waiverdb,*fedmsg.d,docs,conf,waiverdb/migrations
 
 # E124: closing bracket does not match visual indentation
-ignore = E124
+# W503 line break before binary operator
+ignore = E124, W503
