CI/CD: enhancements to integration test jobs
1. Allow to customize messaging providers for C3I debugging purpose.
2. Don't send a message when jobs fail before getting a valid image digest.
3. Print error if failing to send a message.

--- a/openshift/pipelines/templates/waiverdb-integration-test-template.yaml
+++ b/openshift/pipelines/templates/waiverdb-integration-test-template.yaml
@@ -43,6 +43,9 @@ parameters:
   displayName: environment name (dev/stage/prod)
   required: true
   value: dev
+- name: MESSAGING_PROVIDER
+  displayName: Name of the JMS messaging provider
+  value: Red Hat UMB
 objects:
 - kind: ServiceAccount
   apiVersion: v1
@@ -98,4 +101,6 @@ objects:
           value: "${NAME}-jenkins-slave"
         - name: ENVIRONMENT
           value: "${ENVIRONMENT}"
+        - name: MESSAGING_PROVIDER
+          value: "${MESSAGING_PROVIDER}"
         jenkinsfilePath: openshift/pipelines/templates/waiverdb-integration-test.Jenkinsfile
