CI/CD: minor improvements
1. Append UUID to TEST_ID for integration tests to avoid name conflicts
2. Set time limit for Pagure polling job to 30 min
3. Ignore errors of installing dependencies from requirements.txt
4. Ignore failures of cleaning old test environment deployments
5. Do not push to the internal registry (we got enough 'Unknown blob' errors)
6. Fix waiverdb-test-template doesn't support pulling by digests
7. Change test case name format

--- a/openshift/pipelines/templates/waiverdb-build-template.yaml
+++ b/openshift/pipelines/templates/waiverdb-build-template.yaml
@@ -67,7 +67,7 @@ parameters:
   displayName: Comma seperated list of container repositories (without tag) to which the built WaiverDB dev image will be pushed
   description: OpenShift registries must be prefixed with 'atomic:'
   required: false
-  value: "quay.io/factory2/waiverdb,atomic:docker-registry.engineering.redhat.com/factory2/waiverdb"
+  value: "quay.io/factory2/waiverdb"
 - name: CONTAINER_REGISTRY_CREDENTIALS
   displayName: Secret name of container registries used for pulling and pushing images
   value: factory2-pipeline-registry-credentials
