--- a/openshift/pipelines/templates/waiverdb-integration-test-template.yaml
+++ b/openshift/pipelines/templates/waiverdb-integration-test-template.yaml
@@ -88,7 +88,7 @@ objects:
         - name: "IMAGE"
           value: "${IMAGE}"
         - name: IMAGE_IS_SCRATCH
-          value: "false"
+          value: "true"
         - name: "CONTAINER_REGISTRY_CREDENTIALS"
           value: "${CONTAINER_REGISTRY_CREDENTIALS}"
         - name: "TEST_ID"
