--- a/openshift/pipelines/templates/waiverdb-polling-pagure.yaml
+++ b/openshift/pipelines/templates/waiverdb-polling-pagure.yaml
@@ -84,6 +84,7 @@ objects:
       app: "${NAME}"
   spec:
     runPolicy: "Serial"
+    completionDeadlineSeconds: 1800
     strategy:
       type: JenkinsPipeline
       jenkinsPipelineStrategy:
