--- a/openshift/pipelines/jobs/waiverdb-greenwave-promote-to-prod.env
+++ b/openshift/pipelines/jobs/waiverdb-greenwave-promote-to-prod.env
@@ -3,3 +3,4 @@ SOURCE_CONTAINER_REPO=quay.io/factory2/waiverdb
 TARGET_TAG=prod
 DECISION_CONTEXT_REGEX=c3i_promote_stage_to_prod
 MESSAGING_TOPIC=Consumer.rh-jenkins-ci-plugin.c3i-waiverdb-promote-to-prod.VirtualTopic.eng.greenwave.decision.update
+IMAGE_PROMOTION_JOB=waiverdb-promoting-to-prod
