CI/CD: Send an email on post-merge job failure

--- a/openshift/pipelines/jobs/waiverdb-postmerge.env
+++ b/openshift/pipelines/jobs/waiverdb-postmerge.env
@@ -1,2 +1,3 @@
 NAME=waiverdb-postmerge
 PAGURE_DOC_REPO_NAME= # Temporarily disable doc push to workaround https://pagure.io/pagure/issue/3919. Remove this line when it is fixed.
+MAIL_ADDRESS=pnt-factory2-devel@redhat.com 
