Use Jenkinsfile from PR for pre-merge CI builds
Signed-off-by: Lukas Holecek <hluk@email.cz>

--- a/openshift/pipelines/templates/waiverdb-build-template.yaml
+++ b/openshift/pipelines/templates/waiverdb-build-template.yaml
@@ -179,7 +179,7 @@ objects:
     source:
       git:
         uri: "${WAIVERDB_GIT_REPO}"
-        ref: "${WAIVERDB_MAIN_BRANCH}"
+        ref: "${WAIVERDB_GIT_REF}"
     strategy:
       type: JenkinsPipeline
       jenkinsPipelineStrategy:
