Revert "Use Jenkinsfile from PR for pre-merge CI builds"
This reverts commit 5fefc0a840d5d451d6a310234b7756bf0d25cbb2.

--- a/openshift/pipelines/templates/waiverdb-build-template.yaml
+++ b/openshift/pipelines/templates/waiverdb-build-template.yaml
@@ -179,7 +179,7 @@ objects:
     source:
       git:
         uri: "${WAIVERDB_GIT_REPO}"
-        ref: "${WAIVERDB_GIT_REF}"
+        ref: "${WAIVERDB_MAIN_BRANCH}"
     strategy:
       type: JenkinsPipeline
       jenkinsPipelineStrategy:
