Disable sphinxcontrib-issuetracker integration
This extension appears to no longer be maintained. The following issue
prevents adopting a newer version of Sphinx:
    https://github.com/ignatenkobrain/sphinxcontrib-issuetracker/issues/23

Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,5 @@
 [tox]
-envlist = flake8,lint,py36
-
-# Cannot build tox here until this is merged and released
-# https://github.com/ignatenkobrain/sphinxcontrib-issuetracker/pull/13
-# envlist = lint,py36,docs
+envlist = flake8,lint,py36,docs
 
 # If the user is missing an interpreter, don't fail
 skip_missing_interpreters = True
@@ -24,7 +20,6 @@ testpaths = tests/
 changedir = docs
 deps =
     -rrequirements.txt
-    sphinxcontrib-issuetracker
 whitelist_externals =
     mkdir
     rm
