--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8,lint,py36,docs
+envlist = lint,py36,docs
 
 # If the user is missing an interpreter, don't fail
 skip_missing_interpreters = True
