Add krb_principal option for waiverdb-cli
By default Kerberos tries to use FQDN of the server. E.g. if client.conf
contains:

    [waiverdb]
    auth_method=Kerberos
    api_url=https://waiverdb.example.com/api/v1.0

And FQDN of "waiverdb.example.com" is "web-waiverdb.app.os.example.com"
the Kerberos principal will be
"HTTP/web-waiverdb.app.os.example.com@EXAMPLE.COM" which may not match
the principal in server's keytab.

This can be changed by using different configuration file with
`dns_canonicalize_hostname=false` setting and setting path to the file
using `KRB5_CONFIG` environment variable.

The new option `krb_principal` allows to override the Kerberos principal
in waiverdb-cli configuration file instead. E.g:

    [waiverdb]
    auth_method=Kerberos
    api_url=https://waiverdb.example.com/api/v1.0
    krb_principal=HTTP/waiverdb.example.com@EXAMPLE.COM

Signed-off-by: Lukas Holecek <hluk@email.cz>

--- a/conf/client.conf.example
+++ b/conf/client.conf.example
@@ -2,6 +2,8 @@
 # Specify OIDC or Kerberos for authentication
 auth_method=OIDC
 api_url=https://waiverdb-web-waiverdb.app.os.fedoraproject.org/api/v1.0
+# Try overriding Kerberos principal if authentication fails
+#krb_principal=HTTP/waiverdb.example.com@EXAMPLE.COM
 oidc_id_provider=https://id.fedoraproject.org/openidc/
 oidc_client_id=waiverdb-authorizer
 oidc_client_secret=notsecret
