Create a test-requirements file and add `python-ldap` as a dependency
The tests seemed to fail without `python-ldap` as a dependency.

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ skip_missing_interpreters = True
 [testenv]
 deps =
     -rrequirements.txt
+    -rtest-requirements.txt
 whitelist_externals =
     find
 commands =
