--- a/openshift/pipelines/templates/waiverdb-repotracker-trigger.yaml
+++ b/openshift/pipelines/templates/waiverdb-repotracker-trigger.yaml
@@ -28,7 +28,7 @@ parameters:
   required: true
 - name: JENKINS_AGENT_IMAGE
   displayName: Container image for Jenkins slave pods
-  value: docker-registry.engineering.redhat.com/factory2/waiverdb-jenkins-slave:latest
+  value: docker-registry.upshift.redhat.com/factory2/waiverdb-jenkins-slave:latest
 - name: OPENSHIFT_CLOUD_NAME
   displayName: Name of OpenShift cloud in Jenkins master configuration
   value: openshift
