--- a/openshift/pipelines/templates/waiverdb-full-integration-test-template.yaml
+++ b/openshift/pipelines/templates/waiverdb-full-integration-test-template.yaml
@@ -13,6 +13,9 @@ parameters:
   description: This field is used to deploy multiple pipelines to one OpenShift project from this template.
   required: true
   value: waiverdb-full-integration-test
+- name: PIPELINEAAS_PROJECT
+  displayName: OpenShift project of pipeline-as-a-Service jobs
+  value: "c3i"
 - name: IMAGE
   displayName: The container image to be tested
   description: This field must be in repo:tag or repo@sha256 format
@@ -46,13 +49,24 @@ parameters:
 - name: MESSAGING_PROVIDER
   displayName: Name of the JMS messaging provider
   value: Red Hat UMB
-- name: BACKEND_INTEGRATION_TEST_JOB
-  displayName: backend integration test job to trigger
+- name: BACKEND_INTEGRATION_TEST_REPO
+  displayName: backend integration test repo
   required: true
-- name: BACKEND_INTEGRATION_TEST_JOB_NAMESPACE
-  displayName: backend integration test job to trigger
-  required: false
-  value: c3i
+  value: https://gitlab.cee.redhat.com/devops/factory2-segment-tests.git
+- name: BACKEND_INTEGRATION_TEST_REPO_BRANCH
+  displayName: backend integration test repo
+  required: true
+  value: master
+- name: BACKEND_INTEGRATION_TEST_FILE
+  displayName: backend integration test file
+  required: true
+  value: greenwave-segment-test/greenwave-segment-test-c3i.sh
+- name: NO_CLEANUP_AFTER_TEST
+  displayName: Keep environment after test
+  value: "false"
+- name: MAIL_ADDRESS
+  displayName: If set, build failure messages to this mail address.
+{% include "snippets/c3i-library-parameters.yaml" %}
 objects:
 - kind: ServiceAccount
   apiVersion: v1
@@ -78,7 +92,7 @@ objects:
     labels:
       app: "${NAME}"
   spec:
-    runPolicy: "Serial" # FIXME: Parallel is supported, but we have limited quota in UpShift.
+    runPolicy: "Parallel"
     completionDeadlineSeconds: 1800
     source:
       git:
@@ -100,18 +114,26 @@ objects:
           value: "${CONTAINER_REGISTRY_CREDENTIALS}"
         - name: "TEST_ID"
           value: ""
+        - name: "PIPELINEAAS_PROJECT"
+          value: "${PIPELINEAAS_PROJECT}"
         - name: JENKINS_AGENT_IMAGE
           value: "${JENKINS_AGENT_IMAGE}"
         - name: JENKINS_AGENT_CLOUD_NAME
           value: "${JENKINS_AGENT_CLOUD_NAME}"
         - name: JENKINS_AGENT_SERVICE_ACCOUNT
           value: "${NAME}-jenkins-slave"
+        - name: "NO_CLEANUP_AFTER_TEST"
+          value: "${NO_CLEANUP_AFTER_TEST}"
         - name: ENVIRONMENT
           value: "${ENVIRONMENT}"
+        - name:  MAIL_ADDRESS
+          value: "{MAIL_ADDRESS}"
         - name: MESSAGING_PROVIDER
           value: "${MESSAGING_PROVIDER}"
-        - name: BACKEND_INTEGRATION_TEST_JOB
-          value: "${BACKEND_INTEGRATION_TEST_JOB}"
-        - name: BACKEND_INTEGRATION_TEST_JOB_NAMESPACE
-          value: "${BACKEND_INTEGRATION_TEST_JOB_NAMESPACE}"
+        - name: BACKEND_INTEGRATION_TEST_REPO
+          value: "${BACKEND_INTEGRATION_TEST_REPO}"
+        - name: BACKEND_INTEGRATION_TEST_REPO_BRANCH
+          value: "${BACKEND_INTEGRATION_TEST_REPO_BRANCH}"
+        - name: BACKEND_INTEGRATION_TEST_FILE
+          value: "${BACKEND_INTEGRATION_TEST_FILE}"
         jenkinsfilePath: openshift/pipelines/templates/waiverdb-full-integration-test.Jenkinsfile
