Build container from official fedora
Dependency on external container removes flexibility.
Old container has been updated to fedora31 which caused issue:
https://pagure.io/waiverdb/issue/365

--- a/openshift/pipelines/templates/waiverdb-build-template.yaml
+++ b/openshift/pipelines/templates/waiverdb-build-template.yaml
@@ -128,6 +128,9 @@ objects:
     completionDeadlineSeconds: 1800
     strategy:
       dockerStrategy:
+        buildArgs:
+        - name: CA_URLS
+          value: https://password.corp.redhat.com/RH-IT-Root-CA.crt
         forcePull: true
         dockerfilePath: openshift/containers/jenkins-slave/Dockerfile
     resources:
